# Project-UR3-robotic-arm-for-chess-gaming

./: CMakeLists.txt  README.md  package.xml
action/: robot_action.action
config/: controller.yaml  controller_grIpper.yaml
include/: ur3.h
launch/: chess_launch_all.launch
msg/: ik.msg  occupiedFields.msg
src/: action_module.cpp  chess_manager.cpp  planning_module.cpp  sensing_module.cpp
srv/: chessCommand.srv  ffplan.srv  getFieldpose.srv  getOccupiedFields.srv  getpiececellcode.srv  moveArm.srv  optik.srv  pickChess.srv  placeChess.srv  pregraspToBase.srv  transfercoordinate.srv
